envoy.yaml

admin:
  access_log_path: /tmp/admin_access_fulltext.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener1
    address:
      socket_address: { address: 0.0.0.0, port_value: 9902 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: grpc_json
          codec_type: AUTO
          use_remote_address: true
          skip_xff_append: false
          # 访问日志
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/mnt/grpc_access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/",grpc: {} }
                route: { cluster: search, timeout: { seconds: 60 } }
          http_filters:
          - name: envoy.grpc_json_transcoder
            config:
              proto_descriptor: "/tmp/envoy/search.pb"
              services: ["com.wanfangdata.grpc.SearchService","com.wanfangdata.grpc.UserService"]
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false
          - name: envoy.router

  clusters:
  - name: search
    connect_timeout: 10s
    type: LOGICAL_DNS
    lb_policy: round_robin
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: localchroniclegrpcsearch
        port_value: 9903
